# OpenBMS

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresetsTemplate.json  Info.plist  Makefile  README.md  init_bgfx.sh  main.cpp  vcpkg.json
.cursor/rules/: general.mdc
.github/workflows/: ios-testflight.yml  macos-build.yml
include/: bms_parser.hpp  stb_image.h
include/SDL2/: SDL_ttf.h
include/libavutil/: ffversion.h
include/sol/: sol.hpp
ios/Xcode/AsoBMaShow/: Gemfile  Podfile
ios/Xcode/AsoBMaShow/AsoBMaShow.xcodeproj/: project.pbxproj
ios/Xcode/AsoBMaShow/AsoBMaShow.xcodeproj/xcshareddata/xcschemes/: AsoBMaShow.xcscheme
ios/Xcode/AsoBMaShow/AsoBMaShow.xcworkspace/: contents.xcworkspacedata
ios/Xcode/AsoBMaShow/fastlane/: Appfile  Fastfile  Matchfile
ios/Xcode/AsoBMaShow/include/libavformat/: avformat.h
ios/Xcode/AsoBMaShow/lib/libluajit.xcframework/: Info.plist
ios/Xcode/OpenBMS/: .gitignore  Podfile
ios/Xcode/OpenBMS/OpenBMS/: Info.plist
ios/Xcode/OpenBMS/OpenBMS.xcodeproj/: project.pbxproj
ios/Xcode/OpenBMS/OpenBMS.xcodeproj/project.xcworkspace/xcuserdata/xf.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Xcode/OpenBMS/OpenBMS.xcodeproj/xcshareddata/xcschemes/: OpenBMS.xcscheme
ios/Xcode/OpenBMS/OpenBMS.xcodeproj/xcuserdata/xf.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Xcode/OpenBMS/OpenBMS.xcworkspace/: contents.xcworkspacedata
ios/Xcode/OpenBMS/fastlane/: Appfile  Fastfile  Matchfile
ios/Xcode/OpenBMS/include/: sndfile.h
ios/Xcode/OpenBMS/lib/ffmpeg.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libavcodec.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libavdevice.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libavfilter.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libavformat.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libavutil.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libfftools.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libsndfile.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libswresample.xcframework/: Info.plist
ios/Xcode/OpenBMS/lib/libswscale.xcframework/: Info.plist
lib/darwin/: libSDL2.dylib  libSDL2_ttf-2.0.0.dylib  libvlc.12.dylib  libvlccore.9.dylib
lib/win32/: libvlc.lib  libvlccore.lib  lua51.lib  luajit.lib  x264.lib
scripts/: generate_user_presets.ps1  generate_user_presets.sh  get_ios_libs.py  init_bgfx_ios.sh  ios_init.sh  macos_init.sh  windows_init.ps1
shader_src/: Makefile  fs_bgalayer.sc  fs_rect_tint.sc  fs_simple.sc  make.py  varying.def.sc  vs_yuvrgb.sc
shader_src/blur/: fs_blurH.sc  fs_blurV.sc  varying.def.sc  vs_blur.sc
shaders/: Makefile  fs_blurH.sc  fs_blurV.sc  fs_inverse.sc  fs_rect_tint.sc  fs_simple.sc  fs_text.sc  fs_yuvrgb.sc  simple.def.sc  vs_blur.sc  vs_text.sc  vs_yuvrgb.sc
src/: CMakeLists.txt  ChartDBHelper.cpp  ChartDBHelper.h  MacNatives.h  MacNatives.m  MacNatives.mm  SDL_uikit_main.c  Utils.cpp  Utils.h  bgfx_helper.cpp  bgfx_helper.h  bms_parser.cpp  bms_parser.hpp  context.h  iOSNatives.h  iOSNatives.hpp  iOSNatives.m  iOSNatives.mm  main.cpp  main.h  path.cpp  path.h  sqlite3.h  targets.h  tinyfiledialogs.c
src/audio/: AudioWrapper.cpp  AudioWrapper.h  CMakeLists.txt  Jukebox.cpp  Jukebox.h  decoder.cpp  decoder.h  miniaudio.h  stb_vorbis.c  stb_vorbis.h
src/game/: CMakeLists.txt  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  SpriteObject.cpp  SpriteObject.h
src/input/: CMakeLists.txt  IInputHandler.h  IInputSource.h  IRhythmControl.h  InputNormalizer.cpp  InputNormalizer.h  RhythmInputHandler.cpp  RhythmInputHandler.h  SDLInputSource.cpp  SDLInputSource.h  SDLTouchInputSource.cpp  SDLTouchInputSource.h  usb_hid_keys.h  vkcodes.h
src/math/: CMakeLists.txt  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
src/rendering/: BlurPass.cpp  BlurPass.h  BlurPipeline.cpp  BlurPipeline.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  PostProcessPipeline.cpp  PostProcessPipeline.h  RenderPlan.cpp  RenderPlan.h  ShaderManager.h  UniformCache.cpp  UniformCache.h  common.cpp  common.h
src/scene/: CMakeLists.txt  GamePlayScene.cpp  GamePlayScene.h  MainMenuScene.cpp  MainMenuScene.h  ResultScene.cpp  ResultScene.h  Scene.h  SceneManager.cpp  SceneManager.h
src/scene/play/: BMSRenderer.cpp  BMSRenderer.h  CMakeLists.txt  GamePlayScene.cpp  GamePlayScene.h  Judge.cpp  Judge.h  NoteObject.cpp  NoteObject.h  RhythmState.h
src/skin/: CMakeLists.txt  DefaultSkin.cpp  DefaultSkin.h  ISkin.h  SkinTypes.h
src/utils/: CMakeLists.txt  SpriteLoader.cpp  SpriteLoader.h  Stopwatch.cpp  Stopwatch.h
src/video/: CMakeLists.txt  VLCInstance.h  VideoPlayer.cpp  VideoPlayer.h  transcode.c  transcode.h
src/view/: Button.cpp  Button.h  CMakeLists.txt  ChartListItemView.cpp  ChartListItemView.h  ImageView.cpp  ImageView.h  Layout.h  LinearLayout.cpp  LinearLayout.h  RecyclerView.h  TextInputBox.cpp  TextInputBox.h  TextView.cpp  TextView.h  View.cpp  View.h  YogaLayout.cpp  YogaLayout.h  YogaNode.cpp  YogaNode.h
utils/: lipo-all.py
vcpkg-overlays/ffmpeg/: portfile.cmake
